--- a/src/resources/css/app.css
+++ b/src/resources/css/app.css
@@ -1,1 +1,9 @@
 @import "tailwindcss";
+
+.btn {
+    @apply rounded hover:cursor-pointer bg-gray-100 hover:bg-gray-400 border hover:border-white hover:text-white;
+}
+
+.btn.active {
+    @apply bg-gray-400 border-white text-white
+}
